# deep-policy-research

./: .gitignore  LICENSE  README.md  pyproject.toml
data/openai_moderation/category_dataframes/: H2_df.parquet  HR_df.parquet  H_df.parquet  S3_df.parquet  SH_df.parquet  S_df.parquet  V2_df.parquet  V_df.parquet
data/openai_moderation_resplit/: manifest.json
data/openai_moderation_resplit/harassment/: test.jsonl  train.jsonl  validation.jsonl
data/openai_moderation_resplit/hate/: test.jsonl  train.jsonl  validation.jsonl
data/openai_moderation_resplit/hate_threatening/: test.jsonl  train.jsonl  validation.jsonl
data/openai_moderation_resplit/self_harm/: test.jsonl  train.jsonl  validation.jsonl
data/openai_moderation_resplit/sexual/: test.jsonl  train.jsonl  validation.jsonl
docs/: QUICKSTART.md
examples/: openai_moderation_harassment_eval.json
examples/cached_demo/: search_fixture.json  task_spec.json
reproduction/: README.md  __init__.py  print_indexed_rules_stats.py  research_agent.py  run_eval_openai_moderation.py  run_eval_openai_moderation.sh  run_eval_openai_moderation_batch.sh  run_research_openai_moderation.py  run_research_openai_moderation.sh  search_utils.py
scripts/: resplit_openai_moderation.py
src/deep_policy_research/: __init__.py  _serialization.py  agent.py  artifacts.py  cli.py  config.py  datasets.py  eval.py  examples.py  extract.py  fetch.py  openai_client.py  optimize.py  policy.py  prompts.py  rank.py  redteam.py  research.py  run_manager.py  search.py  spec.py
tests/: test_scaffold.py
(+16 files in other folders)
