[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-policy-research"
version = "0.1.0"
description = "Open-domain policy research package scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
dpr = "deep_policy_research.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
